login branch commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>This is a new git practice page</h1>
-<p>Welcome to git tutorial</p>
+<p>Welcome to git tutorial - check git 1- login</p>
 </body>
 
 </html>
