--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>This is a new git practice home page</h1>
-<p>Welcome to git tutorial - Home page - check git</p>
+<p>Welcome to git tutorial - Login page- login branch</p>
 </body>
 
 </html>
